fixed faq overlapping with nav open

--- a/src/app/styles/navbar/navbar.css
+++ b/src/app/styles/navbar/navbar.css
@@ -311,13 +311,12 @@
     position: fixed;
     top: 0;
     width: 100%;
-    z-index: 1;
   }
 
   .sidenav.open {
     width: 100%;
     position: fixed;
-    z-index: 0;
+    z-index: 999;
   }
 
   .sidenav-account {
